fixed overflow animation mayor

--- a/src/app/main/main.scss
+++ b/src/app/main/main.scss
@@ -11,6 +11,7 @@ header {
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: 50% 40%;
+	overflow: hidden;
 }
 
 .translate {
